Tweak error page link style

--- a/public/404.html
+++ b/public/404.html
@@ -23,6 +23,9 @@
       main .error-card .error-code {
         font-size: 2em;
       }
+      main a {
+        color: #3B82F6;
+      }
     </style>
   </head>
   <body>
