--- a/public/error.html
+++ b/public/error.html
@@ -23,13 +23,16 @@
       main .error-card .error-code {
         font-size: 2em;
       }
+      main a {
+        color: #3B82F6;
+      }
     </style>
   </head>
   <body>
     <main>
       <div class="error-card">
         <p>Hmm, that's not right.</p>
-        <p class="error-code">(Unknown error)</p>
+        <p class="error-code">Unknown error</p>
         <a href="/">Back home</a>
       </div>
     </main>
